qinglong/tpl/srv_api.yaml
kind: Service
apiVersion: v1
metadata:
  name: api
  namespace: kt-XXX
  labels:
    app: api
  annotations:
    cloud.google.com/neg: '{"ingress":true}'
    kubesphere.io/creator: admin
spec:
  ports:
    - name: http-cache
      protocol: TCP
      port: 80
      targetPort: 9501
  selector:
    app: api-XXX
  type: ClusterIP
  sessionAffinity: None
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  internalTrafficPolicy: Cluster
