qinglong/tpl/srv_wap.yaml
kind: Service
apiVersion: v1
metadata:
  name: wap
  namespace: kt-XXX
  labels:
    app: wap
  annotations:
    cloud.google.com/neg: '{"ingress":true}'
    kubesphere.io/creator: admin
spec:
  ports:
    - name: http-cache
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: http-wap
      protocol: TCP
      port: 9501
      targetPort: 9501
  selector:
    app: wap-XXX
  type: ClusterIP
  sessionAffinity: None
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  internalTrafficPolicy: Cluster
